# 2604G-HumanModel

./: README.md
2604G-Test-human-model/: CMakeLists.txt  CMakePresets.json  MainWindow.cpp  MainWindow.h  Makefile  Test.cpp  Test.h  TestGPU.cu  VulkanWindow.cpp  VulkanWindow.h  config.xml  main.cpp  makehuman.cpp  makehuman.h
2604G-Test-human-model/resources/: bug.txt  download.txt  keybindings.json  record.txt
2604G-Test-human-model/shaders/: compile.bat  ruler.frag  ruler.frag.spv  ruler.vert  ruler.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
